# bilateralTeleop_dataLink

./: CMakeLists.txt  README.md
include/bilateralTeleop_dataLink/: motion.h  receiver.h  sender.h  serialize.h  transformation.h  type.h
include/bilateralTeleop_dataType/: boost_serialization_eigen.h  type.h
src/: CMakeLists.txt  receiver.cpp  sender.cpp
